# decouple-extended

./: .gitignore  README.md  pyproject.toml
decouple_extended/: __init__.py  crud.py  extensions.py  repositories.py
decouple_extended/tests/: test_casting.py  test_config.py  test_crud.py  test_repositories.py
